<resources>
    <string name="app_name">I18N Demo</string>

    <string name="title">Internationalization</string>
    <string name="content_des">This is an internationalization app demo!</string>

    <string name="select_language">Select Language</string>
    <string name="please_select_app_language">Please select app language</string>

    <string name="defualt_language">Default Language</string>
    <string name="defualt_language_detail">Default Language(%s)</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="thai">Thai Language</string>
</resources>
